--- a/_config.yml
+++ b/_config.yml
@@ -28,10 +28,12 @@ twitter_username:
 github_username:  kielkowiczk
 
 # Build settings
-theme: hacker
+
+#theme: hacker
+remote_theme: pages-themes/hacker@v0.2.0
 plugins:
   - jekyll-feed
-
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
