--- a/_config.yml
+++ b/_config.yml
@@ -28,12 +28,10 @@ twitter_username:
 github_username:  kielkowiczk
 
 # Build settings
-
-#theme: hacker
-remote_theme: pages-themes/hacker@v0.2.0
+theme: hacker
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme # add this line to the plugins list if you already have one
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
