--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Blog abut AI, ML, cybersecurity and linux. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: 
-github_username:  kielkowiczk
+twitter_username: jekyllrb
+github_username:  jekyll
 
 # Build settings
 theme: hacker
